# pqTestSuite

./: CMakeLists.txt  README.md  UsepqTestSuite-Qt4.cmake.in  UsepqTestSuite-Qt5.cmake.in  pqTestConfig.h.in  pqTestRegistration.h  pqTestRegistry.cxx  pqTestRegistry.h  pqTestSuite.h
CMake/: pqCreateTestSuite.cmake  pqInitTestSuiteProject.cmake
cmake/include/: pqCreateTestSuite.cmake  pqTestSuite_setup_cmake_include.cmake  pqTestSuite_setup_package.cmake  pqTestSuite_setup_qt.cmake  pqTestSuite_setup_suite.cmake
cmake/pkg/: pqTestSuiteConfig.cmake.in
